Added shared virtual thread per task executor singleton.